# gflownet

./: .gitignore  .readthedocs.yaml  40_level_scored.mat  Agent.py  CITATION.cff  Documentation.md  LAUNCH.md  LICENSE  MANIFEST.in  README.md  RLmodels.py  activeLearner.py  afile.py  amodel  aptamers.py  dacetest.py  eval.py  eval_al.py  eval_gflownet.py  fake_crystal.sh  fake_crystal_cube_only_uniform.sh  fake_crystal_grid_only_uniform.sh  fake_crystal_nonuniform_constraints.sh  fake_crystal_nonuniform_constraints_flip.sh  fake_crystal_nonuniform_constraints_larger_lr.sh  fake_crystal_nonuniform_constraints_larger_lr_flip.sh  fake_crystal_nonuniform_smaller_lr.sh  fake_crystal_uniform_constraints.sh  fake_crystal_uniform_constraints_2.sh  fake_crystal_uniform_constraints_2b.sh  fake_crystal_uniform_constraints_2c.sh  fake_crystal_uniform_constraints_3.sh  fake_crystal_uniform_constraints_31.sh  fake_crystal_uniform_constraints_4.sh  fake_crystal_uniform_constraints_51.sh  fake_crystal_uniform_constraints_6.sh  fake_crystal_uniform_constraints_6_seed1.sh  fake_crystal_uniform_constraints_6_seed1_notshared.sh  fake_crystal_uniform_constraints_6_seed2.sh  fake_crystal_uniform_constraints_6_seed2_notshared.sh  (+83 more)
.dacecache/getstarted/: dace_files.csv  program.sdfg  program.sdfgl
.dacecache/matmulLoop/: dace.conf  dace_files.csv  program.sdfg  program.sdfgl
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: push_code_check.yml
RLAptamer/: .gitignore  README.md  environment.yml  run.py  train_supervised.py
RLAptamer/data/: data_utils.py  dataset.py
RLAptamer/models/: AptamerLSTM.py  model_utils.py  query_network.py
RLAptamer/scripts/: launch_baseline.sh  launch_supervised.sh  launch_test_ralis.sh  launch_train_ralis.sh
RLAptamer/utils/: final_utils.py  logger.py  parser.py  progressbar.py  replay_buffer.py  replay_new.py
_dacegraphs/: program.sdfg
best_ckpts/: dataset=dna_1_filters=12_layers=1_seed=1  dataset=dna_1_filters=12_layers=2_seed=1  dataset=dna_1_filters=12_layers=4_seed=1  dataset=dna_1_filters=12_layers=4_seed=2  dataset=dna_1_filters=8_layers=1_seed=1  dataset=dna_2_filters=12_layers=1_seed=1  dataset=dna_2_filters=12_layers=4_seed=2  dataset=dna_2_filters=64_layers=4_seed=1  dataset=dna_2_filters=64_layers=8_seed=1  dataset=dna_3_filters=12_layers=4_seed=3  dataset=dna_4_filters=12_layers=4_seed=4  dataset=dna_5_filters=12_layers=4_seed=5  dataset=dna_simple_2_filters=12_layers=4_seed=1  dataset=dna_simple_2_filters=2_layers=1_seed=1  dataset=dna_simple_filters=12_layers=4_seed=1  dataset=dna_simple_filters=24_layers=12_seed=1  dataset=dna_simple_filters=4_layers=1_seed=1
config/: .main.yaml.swp  A1.yml  A2.yml  A3.yml  A4.yml  A5.yml  A7.yml  B2.yml  B3.yml  B5.yml  C1.yml  C2.yml  C3.yml  D1.yml  D2.yml  D3.yml  D4.yml  D5.yml  EX1.yml  EX10.yml  EX11.yml  EX12.yml  EX13.yml  EX14.yml  EX2.yml  EX3.yml  EX4.yml  EX5.yml  EX6.yml  EX7.yml  EX8.yml  EX9.yml  G1.yml  G2.yml  G3.yml  G4.yml  G5.yml  README.md  ST1.yml  ST2.yml  (+19 more)
config/buffer/: base.yaml
config/env/: ad_molecule_simple.yaml  ad_molecule_simple_mixture.yaml  alaninedipeptide.yaml  alaninedipeptide_mixture.yaml  amp.yaml  aptamers.yaml  base.yaml  ccube.yaml  choice.yaml  choices.yaml  constant.yaml  crystals.yaml  ctorus.yaml  ctorusmixture.yaml  cube.yaml  grid.yaml  hcube.yaml  htorus.yaml  investments.yaml  ising.yaml  options.yaml  plane.yaml  points.yaml  scrabble.yaml  setbox.yaml  spacegroup.yaml  tetris.yaml  torus.yaml  torus_rounds.yaml  toy.yaml  tree.yaml
config/eval/: base.yaml
config/evaluator/: base.yaml  tree.yaml
config/experiments/: alaninedipeptide_torchani.yaml  alaninedipeptide_xtb.yaml  conformer.yaml  simple_tetris.yaml  tree.yaml
config/gflownet/: .gflownet.yaml.swp  default_energy.yml  detailedbalance.yaml  flowmatch.yaml  forwardlooking.yaml  gflownet.yaml  potts_30_30_r0.yml  trajectorybalance.yaml  vargrad.yaml
config/gfn-al/: nupen_gfn_10_40_en-r0.yml  nupen_gfn_10_40_en-r1.yml  nupen_gfn_20_60_en-r0.yml  nupen_gfn_20_60_en-r1.yml  nupen_gfn_20_60_en-r2.yml  nupen_gfn_20_60_en-r3.yml  nupen_gfn_20_60_en-r4.yml  nupen_gfn_20_60_en-r5.yml  nupen_gfn_20_60_en-r6.yml  nupen_gfn_20_60_en-r7.yml  nupen_gfn_20_80_en-r0.yml  nupen_gfn_40_100_en-r0.yml  nupen_gfn_40_100_en-r1.yml  nupen_gfn_40_100_en-r2.yml
config/git/: pre-commit
config/grid/: default.yml
config/loss/: base.yaml  (+13 more)
data/: alanine_dipeptide_conformers_1.npy  dict_IDs_with_columns.pkl  haberman.csv  haberman_balanced.csv  iris.csv  iris.pkl  test_sequence_smiles_seh_scores.pkl  titanic.csv  titanic_small.csv  toy1.csv  toy2.csv  train_sequence_smiles_seh_scores.pkl  water_small.csv
datasets/: dataset=dna_simple_filters=12_layers=2_seed=1  dna_1.npy  dna_3.npy  dna_5.npy  dna_simple.npy  dna_simple_0.npy  dna_simple_2.npy
docs/: Makefile  conf.py  index.rst  requirements-docs.txt  tutorial.rst
easy_run_1/: dna_simple.npy
gflownet/: __init__.py  gflownet.py  logz.py
mila/: launch.py
potts/: JJ_1.mat  JJ_10.mat  JJ_100.mat  JJ_101.mat  JJ_102.mat  JJ_103.mat  JJ_104.mat  JJ_105.mat  JJ_106.mat  JJ_107.mat  JJ_108.mat  JJ_109.mat  JJ_11.mat  JJ_110.mat  JJ_111.mat  JJ_112.mat  JJ_113.mat  JJ_114.mat  JJ_115.mat  JJ_116.mat  JJ_117.mat  JJ_118.mat  JJ_119.mat  JJ_12.mat  JJ_120.mat  JJ_121.mat  JJ_122.mat  JJ_123.mat  JJ_124.mat  JJ_125.mat  JJ_126.mat  JJ_127.mat  JJ_128.mat  JJ_129.mat  JJ_13.mat  JJ_130.mat  JJ_131.mat  JJ_132.mat  JJ_133.mat  JJ_134.mat  (+396 more)
samples/: gfn_samples.csv  gfn_samples.pkl
sbatch/: README.md  example-jobs.yaml  main.sh  main_conformer.sh  template-conda.sh
scripts/: .old.eval_gflownet.py  README.md  dav_mp20_stats.py  eval_crystalgflownet_samples.py  eval_gflownet.py  eval_gflownet_sasha.py  fit_lattice_proxy.py  generate_dict_of_IDs_from_DELIRIC1.py  get_comet_results.py  get_periodic_table.py  mp20_matbench_lp_range.py  oracle_annotate.py  oracle_sampler.py  process_fake_crystal.py  scrabble_make_vocabulary_length7.py
setup/: README.md  conformer.sh  continuous_integration.sh  crystals.sh  gflownet.sh
tests/: conftest.py
utils/: common.py
(+804 files in other folders)
