[project]
name = "gflownet"
version = "0.1.0"
description = "GFlowNets, generative flow networks for probabilistic modelling"
authors = [
    {name = "alexhernandezgarcia", email = "alex.hernandez-garcia@mila.quebec"},
    {name = "AlexandraVolokhova"},
    {name = "nikita-0209"},
    {name = "michalkoziarski"},
    {name = "sh-divya"},
    {name = "carriepl"},
    {name = "vict0rsch"},
    {name = "josephdviviano"},
    {name = "engmubarak48"},
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "botorch >=0.10.0",
    "hydra-core >=1.3.2",
    "matplotlib",
    "numpy >=1.26.4,<2.0.0",
    "pandas",
    "plotly >=5.17.0",
    "scikit-learn >=1.2.2",
    "scipy >=1.11.2",
    "six >=1.16.0",
    "torch ==2.5.1",
    "torchtyping >=0.1.4",
    "tqdm",
    "wandb >=0.15.11",
]

[project.optional-dependencies]
dev = [
    "black >=23.9.1",
    "flake8 >=6.1.0",
    "isort >=5.12.0",
    "ipdb >=0.13.13",
    "jupyter >=1.0.0",
    "pylint >=2.17.6",
    "pytest >=7.4.2",
    "pytest-repeat >=0.9.1",
]

# TODO: Consider relaxing the == dependency of pymatgen. As of Feb 2025, the latest version
# is problematic. ==2024.3.1 is the minimum version required by pyxtal.
materials = [
    "dave @ git+https://github.com:sh-divya/crystalproxies.git@2.0.3",
    "pymatgen ==2024.3.1",
    "pyshtools >=4.10.3",
    "pyxtal >=0.6.1",
    "torch_scatter >=2.1.2",
]

# TODO: Dependencies in molecules should be further tested
molecules = [
    "rdkit ==2024.9.5",
    "torch-geometric >=2.6.1",
    "torchani >=2.2.4",
]
tree = [
    "torch-geometric >=2.6.1",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
